[gd_scene load_steps=4 format=3 uid="uid://bk3kxqf2rfhf2"]

[ext_resource type="Script" uid="uid://c0p5p7f4255xl" path="res://scripts/Main.gd" id="1_c5r4u"]
[ext_resource type="PackedScene" uid="uid://cggydgqeq7d4t" path="res://scenes/Player.tscn" id="2_b7qnu"]
[ext_resource type="PackedScene" uid="uid://dhkmxwivokah4" path="res://scenes/Platform.tscn" id="3_u8n7o"]

[node name="Main" type="Node2D"]
script = ExtResource("1_c5r4u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 300)

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-10, 300)

[node name="RightWall" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(1034, 300)

[node name="Floor" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(512, 610)

[node name="Ceiling" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(512, -10)

[node name="Player" parent="." instance=ExtResource("2_b7qnu")]
position = Vector2(100, 500)

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform1" parent="Platforms" instance=ExtResource("3_u8n7o")]
position = Vector2(200, 480)

[node name="Platform2" parent="Platforms" instance=ExtResource("3_u8n7o")]
position = Vector2(400, 420)

[node name="Platform3" parent="Platforms" instance=ExtResource("3_u8n7o")]
position = Vector2(600, 460)

[node name="Platform4" parent="Platforms" instance=ExtResource("3_u8n7o")]
position = Vector2(800, 400)

[node name="GroundPlatform" parent="Platforms" instance=ExtResource("3_u8n7o")]
position = Vector2(512, 550)
scale = Vector2(10, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"
